samples/_failures_safe/1761454171_dcc17c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf68180d.c: In function ‘main’:
./samples/SAFE/__tmp_bf68180d.c:145: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_bf68180d.c:144:9: error: expected declaration or statement at end of input
  144 |         return EXIT_SUCCESS
      |         ^~~~~~
./samples/SAFE/__tmp_bf68180d.c:144:9: error: expected declaration or statement at end of input
